# freshdocs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT-INTEGRATION.md  IMAGE-PROMPTS.md  LAUNCH.md  RELEASE.md  SOURCES.md  WHY.md
docs/assets/: README.md
src/freshdocs/: __init__.py  cli.py  core.py  default_registry.json  mcp.py  source_catalog.json  sources.py
tests/: test_core.py
