[project]
name = "freshdocs"
version = "0.1.0"
description = "Local, version-pinned documentation context for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Freshdocs Contributors" }]
keywords = ["ai", "agents", "documentation", "mcp", "llms", "context"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Supersynergy/freshdocs"
Repository = "https://github.com/Supersynergy/freshdocs"
Issues = "https://github.com/Supersynergy/freshdocs/issues"

[project.scripts]
freshdocs = "freshdocs.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freshdocs"]
